# fast-tags

./: .dockerignore  .editorconfig  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.test.txt  requirements.txt  run.sh  schemas.py
.github/workflow/: main.yml
.github/workflows/: main.yml  release-drafter.yml  release.yml
alembic/: env.py
alembic/versions/: 4e4ad3a7ca01_revision_with_array.py  78db935547c8_uses_foreingkey2.py  960ef814f8c5_revision_with_array.py  9620930ad44d_some_revision.py  a70344428be8_uses_foreingkey.py
api/: database.py  main.py  models.py  schemas.py  service.py
scripts/: run.sh
tests/: conftest.py  test_faux.py  test_main.py  test_main_integration.py  test_main_unit.py
