[tool.poetry]
name = "fast-tags"
version = "0.1.0"
description = "FastAPI + Github actions + Docker"
authors = ["Ernesto Mancebo <ernesmancebo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "2.0.4"
fastapi = "0.92.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "2.9.5"
alembic = "^1.13.1"
uvicorn = "^0.27.1"
opentelemetry-distro = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
flake8 = "^7.0.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
